# bme280Server

./: .gitignore  LICENSE  Makefile.am  Readme.md  bme280Server.service  bme280Server.service.in  bme280Server.service.tmp  clean_conf.sh  configure.ac  gen_configure.sh  generate_conf.sh  main.c
.github/workflows/: codeql-analysis.yml
libs/BuildInc/: BuildInc.c  Makefile.am  configure.ac
src/: Build.h  Makefile  MeasureDataBase.cpp  MeasureDataBase.h  SensorBME280.cpp  SensorBME280.h  SensorHistory.cpp  SensorHistory.h  SensorHttpServer.cpp  SensorHttpServer.h  db.db3  main.cpp
